[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/RuningPlatforms.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.151, 7.7247 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90.2586, 8.0397 )

[node name="RuningPlatforms" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="CheckGenerate" type="Area2D" parent="."]
position = Vector2( 210, 0 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckGenerate"]
shape = SubResource( 1 )

[node name="RunningPlatformArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RunningPlatformArea"]
position = Vector2( 90, 0 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_exited" from="CheckGenerate" to="." method="_on_CheckGenerate_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
